fix fat and ugly scrollbars

--- a/src/shared/style.css
+++ b/src/shared/style.css
@@ -67,6 +67,8 @@ button {
     height: 100%;
     background-color: black;
     transition: right .3s ease;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     overflow-y: scroll;
 }
 
